aspen/aspen/parser/AspenParser.output
Grammar

    0 $accept: begin $end

    1 begin: mach
    2      | app

    3 mach: machcontent

    4 machcontent: globalstmt
    5            | component
    6            | machcontent globalstmt
    7            | machcontent component

    8 component: TIDENT TIDENT TLBRACE componentstatements TRBRACE

    9 componentstatements: componentstmt
   10                    | componentstatements componentstmt

   11 componentstmt: property
   12              | resource
   13              | power
   14              | conflict
   15              | subcomponent

   16 subcomponent: TIDENT TIDENT
   17             | TIDENT quantity TIDENT

   18 property: TKW_PROPERTY TIDENT quantity
   19         | TKW_PROPERTY TIDENT

   20 conflict: TKW_CONFLICT TIDENT TCOMMA TIDENT

   21 resource: TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity TKW_WITH traitdefinitions
   22         | TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity

   23 traitdefinitions: TIDENT quantity
   24                 | TIDENT TLPAREN TIDENT TRPAREN quantity
   25                 | traitdefinitions TCOMMA TIDENT quantity
   26                 | traitdefinitions TCOMMA TIDENT TLPAREN TIDENT TRPAREN quantity

   27 power: TKW_STATIC TKW_POWER quantity
   28      | TKW_DYNAMIC TKW_POWER quantity

   29 app: TKW_MODEL TIDENT TLBRACE globalstatements kernels TRBRACE

   30 kernels: kernel
   31        | kernels kernel

   32 kernel: TKW_KERNEL ident TLBRACE kernelstatements TRBRACE
   33       | TKW_KERNEL ident TLBRACE localstatements kernelstatements TRBRACE
   34       | TKW_KERNEL ident TLPAREN argdecllist TRPAREN TLBRACE kernelstatements TRBRACE
   35       | TKW_KERNEL ident TLPAREN argdecllist TRPAREN TLBRACE localstatements kernelstatements TRBRACE

   36 ident: TIDENT
   37      | TIDENT TDOT ident

   38 value: TINT
   39      | TREAL

   40 optionalident: %empty
   41              | ident

   42 constant: TKW_10POWER

   43 globalstatements: globalstmt
   44                 | globalstatements globalstmt

   45 localstatements: localstmt
   46                | localstatements localstmt

   47 kernelstatements: kernelstmt
   48                 | kernelstatements kernelstmt

   49 execstatements: execstmt
   50               | execstatements execstmt

   51 globalstmt: importstmt
   52           | paramstmt
   53           | datastmt

   54 localstmt: importstmt
   55          | paramstmt
   56          | datastmt

   57 kernelstmt: TKW_EXECUTE optionalstring TLBRACE execstatements TRBRACE
   58           | TKW_EXECUTE quantity optionalstring TLBRACE execstatements TRBRACE
   59           | controlstmt

   60 execstmt: TIDENT quantity tofrom optionaltraitlist
   61         | TIDENT quantity TKW_OF TKW_SIZE quantity tofrom optionaltraitlist

   62 paramstmt: TKW_PARAM ident TEQUAL expr
   63          | TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   65          | TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   68          | TKW_ENUM TIDENT TLBRACE identlist TRBRACE

   69 arraylist: TLBRACE valuelist TRBRACE
   70          | arraylist TCOMMA TLBRACE valuelist TRBRACE

   71 valuelist: TINT
   72          | TREAL
   73          | valuelist TCOMMA TINT
   74          | valuelist TCOMMA TREAL

   75 identlist: TIDENT
   76          | identlist TCOMMA TIDENT

   77 samplestmt: TKW_SAMPLE ident TKW_FROM functioncall

   78 datastmt: TKW_DATA TIDENT TKW_AS functioncall
   79         | TKW_DATA TIDENT quantity

   80 importstmt: TKW_IMPORT TIDENT TKW_FROM TSTRING
   81           | TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

   82 kernelcall: TKW_CALL ident
   83           | TKW_CALL ident TLPAREN arguments TRPAREN

   84 comparison: comparison TAND comparison
   85           | comparison TOR comparison
   86           | expr TCOMPEQ expr
   87           | expr TCOMPNE expr
   88           | expr TCOMPLT expr
   89           | expr TCOMPGT expr
   90           | expr TCOMPLE expr
   91           | expr TCOMPGE expr

   92 ifthencontrol: TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE
   93              | TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE TKW_ELSE TLBRACE kernelstatements TRBRACE
   94              | TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE TKW_ELSE ifthencontrol

   95 caseitems: quantity TLBRACE kernelstatements TRBRACE
   96          | caseitems quantity TLBRACE kernelstatements TRBRACE

   97 probabilitycontrol: TKW_PROBABILITY TLBRACE caseitems TRBRACE
   98                   | TKW_PROBABILITY TLBRACE caseitems TKW_ELSE TLBRACE kernelstatements TRBRACE TRBRACE

   99 switchcontrol: TKW_SWITCH TLPAREN TIDENT TRPAREN TLBRACE caseitems TRBRACE
  100              | TKW_SWITCH TLPAREN TIDENT TRPAREN TLBRACE caseitems TKW_ELSE TLBRACE kernelstatements TRBRACE TRBRACE

  101 optionalstring: %empty
  102               | TSTRING

  103 controlstmt: kernelcall
  104            | samplestmt
  105            | TKW_PAR optionalstring TLBRACE kernelstatements TRBRACE
  106            | TKW_SEQ optionalstring TLBRACE kernelstatements TRBRACE
  107            | TKW_ITERATE optionalident quantity optionalstring TLBRACE kernelstatements TRBRACE
  108            | TKW_MAP optionalident quantity optionalstring TLBRACE kernelstatements TRBRACE
  109            | ifthencontrol
  110            | probabilitycontrol
  111            | switchcontrol

  112 tofrom: %empty
  113       | TKW_TO TIDENT
  114       | TKW_FROM TIDENT

  115 optionaltraitlist: %empty
  116                  | TKW_AS traitlist

  117 traitlist: trait
  118          | traitlist TCOMMA trait

  119 trait: TIDENT
  120      | TIDENT TLPAREN expr TRPAREN

  121 argdecllist: argdecl
  122            | argdecllist TCOMMA argdecl

  123 argdecl: TKW_DATA ident
  124        | TKW_PARAM ident

  125 quantity: TLBRACKET expr TRBRACKET

  126 expr: value
  127     | constant
  128     | ident
  129     | TIDENT TLBRACKET expr TRBRACKET
  130     | TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  131     | TLPAREN expr TRPAREN
  132     | expr TPLUS expr
  133     | expr TMINUS expr
  134     | expr TMUL expr
  135     | expr TDIV expr
  136     | expr TEXP expr
  137     | TMINUS expr
  138     | functioncall

  139 functioncall: TIDENT TLPAREN arguments TRPAREN

  140 arguments: %empty
  141          | expr
  142          | arguments TCOMMA expr

  143 namedarguments: TIDENT TEQUAL expr
  144               | namedarguments TCOMMA TIDENT TEQUAL expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TKW_PARAM (258) 62 63 64 65 66 67 124
TKW_ENUM (259) 68
TKW_IN (260) 63 64
TKW_WITH (261) 21 81
TKW_OF (262) 61
TKW_SIZE (263) 61
TKW_MODEL (264) 29
TKW_KERNEL (265) 32 33 34 35
TKW_DATA (266) 78 79 123
TKW_SAMPLE (267) 77
TKW_IMPORT (268) 80 81
TKW_AS (269) 78 116
TKW_TO (270) 113
TKW_FROM (271) 77 80 81 114
TKW_CALL (272) 82 83
TKW_ITERATE (273) 107
TKW_MAP (274) 108
TKW_PAR (275) 105
TKW_SEQ (276) 106
TKW_EXECUTE (277) 57 58
TKW_IF (278) 92 93 94
TKW_ELSE (279) 93 94 98 100
TKW_PROBABILITY (280) 97 98
TKW_SWITCH (281) 99 100
TKW_RESOURCE (282) 21 22
TKW_CONFLICT (283) 20
TKW_POWER (284) 27 28
TKW_STATIC (285) 27
TKW_DYNAMIC (286) 28
TKW_PROPERTY (287) 18 19
TIDENT (288) 8 16 17 18 19 20 21 22 23 24 25 26 29 36 37 60 61 64 66
    68 75 76 78 79 80 81 99 100 113 114 119 120 129 130 139 143 144
TSTRING (289) 80 81 102
TINT (290) 38 71 73
TREAL (291) 39 72 74
TKW_10POWER (292) 42
TDOTDOT (293) 63
TEQUAL (294) 62 63 64 65 66 67 143 144
TLPAREN (295) 21 22 24 26 34 35 66 83 92 93 94 99 100 120 131 139
TRPAREN (296) 21 22 24 26 34 35 66 83 92 93 94 99 100 120 131 139
TLBRACE (297) 8 29 32 33 34 35 57 58 65 67 68 69 70 92 93 94 95 96
    97 98 99 100 105 106 107 108
TRBRACE (298) 8 29 32 33 34 35 57 58 65 67 68 69 70 92 93 94 95 96
    97 98 99 100 105 106 107 108
TLBRACKET (299) 65 66 67 125 129 130
TRBRACKET (300) 65 66 67 125 129 130
TCOMMA (301) 20 25 26 70 73 74 76 118 122 142 144
TDOT (302) 37
TPLUS (303) 132
TMINUS (304) 133 137
TMUL (305) 134
TDIV (306) 135
TEXP (307) 136
TCOMPEQ (308) 86
TCOMPNE (309) 87
TCOMPLT (310) 88
TCOMPGT (311) 89
TCOMPLE (312) 90
TCOMPGE (313) 91
TAND (314) 84
TOR (315) 85
NEG (316)


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
begin (63)
    on left: 1 2, on right: 0
mach (64)
    on left: 3, on right: 1
machcontent (65)
    on left: 4 5 6 7, on right: 3 6 7
component (66)
    on left: 8, on right: 5 7
componentstatements (67)
    on left: 9 10, on right: 8 10
componentstmt (68)
    on left: 11 12 13 14 15, on right: 9 10
subcomponent (69)
    on left: 16 17, on right: 15
property (70)
    on left: 18 19, on right: 11
conflict (71)
    on left: 20, on right: 14
resource (72)
    on left: 21 22, on right: 12
traitdefinitions (73)
    on left: 23 24 25 26, on right: 21 25 26
power (74)
    on left: 27 28, on right: 13
app (75)
    on left: 29, on right: 2
kernels (76)
    on left: 30 31, on right: 29 31
kernel (77)
    on left: 32 33 34 35, on right: 30 31
ident (78)
    on left: 36 37, on right: 32 33 34 35 37 41 62 63 64 65 66 67 77
    82 83 123 124 128
value (79)
    on left: 38 39, on right: 126
optionalident (80)
    on left: 40 41, on right: 107 108
constant (81)
    on left: 42, on right: 127
globalstatements (82)
    on left: 43 44, on right: 29 44
localstatements (83)
    on left: 45 46, on right: 33 35 46
kernelstatements (84)
    on left: 47 48, on right: 32 33 34 35 48 92 93 94 95 96 98 100
    105 106 107 108
execstatements (85)
    on left: 49 50, on right: 50 57 58
globalstmt (86)
    on left: 51 52 53, on right: 4 6 43 44
localstmt (87)
    on left: 54 55 56, on right: 45 46
kernelstmt (88)
    on left: 57 58 59, on right: 47 48
execstmt (89)
    on left: 60 61, on right: 49 50
paramstmt (90)
    on left: 62 63 64 65 66 67 68, on right: 52 55
arraylist (91)
    on left: 69 70, on right: 67 70
valuelist (92)
    on left: 71 72 73 74, on right: 69 70 73 74
identlist (93)
    on left: 75 76, on right: 68 76
samplestmt (94)
    on left: 77, on right: 104
datastmt (95)
    on left: 78 79, on right: 53 56
importstmt (96)
    on left: 80 81, on right: 51 54
kernelcall (97)
    on left: 82 83, on right: 103
comparison (98)
    on left: 84 85 86 87 88 89 90 91, on right: 84 85 92 93 94
ifthencontrol (99)
    on left: 92 93 94, on right: 94 109
caseitems (100)
    on left: 95 96, on right: 96 97 98 99 100
probabilitycontrol (101)
    on left: 97 98, on right: 110
switchcontrol (102)
    on left: 99 100, on right: 111
optionalstring (103)
    on left: 101 102, on right: 57 58 105 106 107 108
controlstmt (104)
    on left: 103 104 105 106 107 108 109 110 111, on right: 59
tofrom (105)
    on left: 112 113 114, on right: 60 61
optionaltraitlist (106)
    on left: 115 116, on right: 60 61
traitlist (107)
    on left: 117 118, on right: 116 118
trait (108)
    on left: 119 120, on right: 117 118
argdecllist (109)
    on left: 121 122, on right: 34 35 122
argdecl (110)
    on left: 123 124, on right: 121 122
quantity (111)
    on left: 125, on right: 17 18 21 22 23 24 25 26 27 28 58 60 61
    79 95 96 107 108
expr (112)
    on left: 126 127 128 129 130 131 132 133 134 135 136 137 138, on right:
    62 63 64 86 87 88 89 90 91 120 125 129 130 131 132 133 134 135
    136 137 141 142 143 144
functioncall (113)
    on left: 139, on right: 77 78 138
arguments (114)
    on left: 140 141 142, on right: 65 66 83 139 142
namedarguments (115)
    on left: 143 144, on right: 81 144


State 0

    0 $accept: . begin $end
    1 begin: . mach
    2      | . app
    3 mach: . machcontent
    4 machcontent: . globalstmt
    5            | . component
    6            | . machcontent globalstmt
    7            | . machcontent component
    8 component: . TIDENT TIDENT TLBRACE componentstatements TRBRACE
   29 app: . TKW_MODEL TIDENT TLBRACE globalstatements kernels TRBRACE
   51 globalstmt: . importstmt
   52           | . paramstmt
   53           | . datastmt
   62 paramstmt: . TKW_PARAM ident TEQUAL expr
   63          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   65          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   68          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   78 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   79         | . TKW_DATA TIDENT quantity
   80 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   81           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_MODEL   shift, and go to state 3
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5
    TIDENT      shift, and go to state 6

    begin        go to state 7
    mach         go to state 8
    machcontent  go to state 9
    component    go to state 10
    app          go to state 11
    globalstmt   go to state 12
    paramstmt    go to state 13
    datastmt     go to state 14
    importstmt   go to state 15


State 1

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   62 paramstmt: TKW_PARAM . ident TEQUAL expr
   63          | TKW_PARAM . ident TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | TKW_PARAM . ident TEQUAL expr TKW_IN TIDENT
   65          | TKW_PARAM . ident TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | TKW_PARAM . ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | TKW_PARAM . ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TIDENT  shift, and go to state 16

    ident  go to state 17


State 2

   68 paramstmt: TKW_ENUM . TIDENT TLBRACE identlist TRBRACE

    TIDENT  shift, and go to state 18


State 3

   29 app: TKW_MODEL . TIDENT TLBRACE globalstatements kernels TRBRACE

    TIDENT  shift, and go to state 19


State 4

   78 datastmt: TKW_DATA . TIDENT TKW_AS functioncall
   79         | TKW_DATA . TIDENT quantity

    TIDENT  shift, and go to state 20


State 5

   80 importstmt: TKW_IMPORT . TIDENT TKW_FROM TSTRING
   81           | TKW_IMPORT . TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TIDENT  shift, and go to state 21


State 6

    8 component: TIDENT . TIDENT TLBRACE componentstatements TRBRACE

    TIDENT  shift, and go to state 22


State 7

    0 $accept: begin . $end

    $end  shift, and go to state 23


State 8

    1 begin: mach .

    $default  reduce using rule 1 (begin)


State 9

    3 mach: machcontent .  [$end]
    6 machcontent: machcontent . globalstmt
    7            | machcontent . component
    8 component: . TIDENT TIDENT TLBRACE componentstatements TRBRACE
   51 globalstmt: . importstmt
   52           | . paramstmt
   53           | . datastmt
   62 paramstmt: . TKW_PARAM ident TEQUAL expr
   63          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   65          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   68          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   78 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   79         | . TKW_DATA TIDENT quantity
   80 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   81           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5
    TIDENT      shift, and go to state 6

    $default  reduce using rule 3 (mach)

    component   go to state 24
    globalstmt  go to state 25
    paramstmt   go to state 13
    datastmt    go to state 14
    importstmt  go to state 15


State 10

    5 machcontent: component .

    $default  reduce using rule 5 (machcontent)


State 11

    2 begin: app .

    $default  reduce using rule 2 (begin)


State 12

    4 machcontent: globalstmt .

    $default  reduce using rule 4 (machcontent)


State 13

   52 globalstmt: paramstmt .

    $default  reduce using rule 52 (globalstmt)


State 14

   53 globalstmt: datastmt .

    $default  reduce using rule 53 (globalstmt)


State 15

   51 globalstmt: importstmt .

    $default  reduce using rule 51 (globalstmt)


State 16

   36 ident: TIDENT .  [$end, TKW_PARAM, TKW_ENUM, TKW_IN, TKW_KERNEL, TKW_DATA, TKW_SAMPLE, TKW_IMPORT, TKW_FROM, TKW_CALL, TKW_ITERATE, TKW_MAP, TKW_PAR, TKW_SEQ, TKW_EXECUTE, TKW_IF, TKW_PROBABILITY, TKW_SWITCH, TIDENT, TDOTDOT, TEQUAL, TLPAREN, TRPAREN, TLBRACE, TRBRACE, TLBRACKET, TRBRACKET, TCOMMA, TPLUS, TMINUS, TMUL, TDIV, TEXP, TCOMPEQ, TCOMPNE, TCOMPLT, TCOMPGT, TCOMPLE, TCOMPGE, TAND, TOR]
   37      | TIDENT . TDOT ident

    TDOT  shift, and go to state 26

    $default  reduce using rule 36 (ident)


State 17

   62 paramstmt: TKW_PARAM ident . TEQUAL expr
   63          | TKW_PARAM ident . TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | TKW_PARAM ident . TEQUAL expr TKW_IN TIDENT
   65          | TKW_PARAM ident . TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | TKW_PARAM ident . TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | TKW_PARAM ident . TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TEQUAL     shift, and go to state 27
    TLBRACKET  shift, and go to state 28


State 18

   68 paramstmt: TKW_ENUM TIDENT . TLBRACE identlist TRBRACE

    TLBRACE  shift, and go to state 29


State 19

   29 app: TKW_MODEL TIDENT . TLBRACE globalstatements kernels TRBRACE

    TLBRACE  shift, and go to state 30


State 20

   78 datastmt: TKW_DATA TIDENT . TKW_AS functioncall
   79         | TKW_DATA TIDENT . quantity
  125 quantity: . TLBRACKET expr TRBRACKET

    TKW_AS     shift, and go to state 31
    TLBRACKET  shift, and go to state 32

    quantity  go to state 33


State 21

   80 importstmt: TKW_IMPORT TIDENT . TKW_FROM TSTRING
   81           | TKW_IMPORT TIDENT . TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_FROM  shift, and go to state 34


State 22

    8 component: TIDENT TIDENT . TLBRACE componentstatements TRBRACE

    TLBRACE  shift, and go to state 35


State 23

    0 $accept: begin $end .

    $default  accept


State 24

    7 machcontent: machcontent component .

    $default  reduce using rule 7 (machcontent)


State 25

    6 machcontent: machcontent globalstmt .

    $default  reduce using rule 6 (machcontent)


State 26

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   37      | TIDENT TDOT . ident

    TIDENT  shift, and go to state 16

    ident  go to state 36


State 27

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   38 value: . TINT
   39      | . TREAL
   42 constant: . TKW_10POWER
   62 paramstmt: TKW_PARAM ident TEQUAL . expr
   63          | TKW_PARAM ident TEQUAL . expr TKW_IN expr TDOTDOT expr
   64          | TKW_PARAM ident TEQUAL . expr TKW_IN TIDENT
  126 expr: . value
  127     | . constant
  128     | . ident
  129     | . TIDENT TLBRACKET expr TRBRACKET
  130     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  131     | . TLPAREN expr TRPAREN
  132     | . expr TPLUS expr
  133     | . expr TMINUS expr
  134     | . expr TMUL expr
  135     | . expr TDIV expr
  136     | . expr TEXP expr
  137     | . TMINUS expr
  138     | . functioncall
  139 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 37
    TINT         shift, and go to state 38
    TREAL        shift, and go to state 39
    TKW_10POWER  shift, and go to state 40
    TLPAREN      shift, and go to state 41
    TMINUS       shift, and go to state 42

    ident         go to state 43
    value         go to state 44
    constant      go to state 45
    expr          go to state 46
    functioncall  go to state 47


State 28

   65 paramstmt: TKW_PARAM ident TLBRACKET . TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | TKW_PARAM ident TLBRACKET . TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | TKW_PARAM ident TLBRACKET . TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TRBRACKET  shift, and go to state 48


State 29

   68 paramstmt: TKW_ENUM TIDENT TLBRACE . identlist TRBRACE
   75 identlist: . TIDENT
   76          | . identlist TCOMMA TIDENT

    TIDENT  shift, and go to state 49

    identlist  go to state 50


State 30

   29 app: TKW_MODEL TIDENT TLBRACE . globalstatements kernels TRBRACE
   43 globalstatements: . globalstmt
   44                 | . globalstatements globalstmt
   51 globalstmt: . importstmt
   52           | . paramstmt
   53           | . datastmt
   62 paramstmt: . TKW_PARAM ident TEQUAL expr
   63          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   64          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   65          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE arguments TRBRACE
   66          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   67          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   68          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   78 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   79         | . TKW_DATA TIDENT quantity
   80 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   81           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5

    globalstatements  go to state 51
    globalstmt        go to state 52
    paramstmt         go to state 13
    datastmt          go to state 14
    importstmt        go to state 15


State 31

   78 datastmt: TKW_DATA TIDENT TKW_AS . functioncall
  139 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT  shift, and go to state 53

    functioncall  go to state 54


State 32

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   38 value: . TINT
   39      | . TREAL
   42 constant: . TKW_10POWER
  125 quantity: TLBRACKET . expr TRBRACKET
  126 expr: . value
  127     | . constant
  128     | . ident
  129     | . TIDENT TLBRACKET expr TRBRACKET
  130     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  131     | . TLPAREN expr TRPAREN
  132     | . expr TPLUS expr
  133     | . expr TMINUS expr
  134     | . expr TMUL expr
  135     | . expr TDIV expr
  136     | . expr TEXP expr
  137     | . TMINUS expr
  138     | . functioncall
  139 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 37
    TINT         shift, and go to state 38
    TREAL        shift, and go to state 39
    TKW_10POWER  shift, and go to state 40
    TLPAREN      shift, and go to state 41
    TMINUS       shift, and go to state 42

    ident         go to state 43
    value         go to state 44
    constant      go to state 45
    expr          go to state 55
    functioncall  go to state 47


State 33

   79 datastmt: TKW_DATA TIDENT quantity .

    $default  reduce using rule 79 (datastmt)


State 34

   80 importstmt: TKW_IMPORT TIDENT TKW_FROM . TSTRING
   81           | TKW_IMPORT TIDENT TKW_FROM . TSTRING TKW_WITH namedarguments

    TSTRING  shift, and go to state 56


State 35

    8 component: TIDENT TIDENT TLBRACE . componentstatements TRBRACE
    9 componentstatements: . componentstmt
   10                    | . componentstatements componentstmt
   11 componentstmt: . property
   12              | . resource
   13              | . power
   14              | . conflict
   15              | . subcomponent
   16 subcomponent: . TIDENT TIDENT
   17             | . TIDENT quantity TIDENT
   18 property: . TKW_PROPERTY TIDENT quantity
   19         | . TKW_PROPERTY TIDENT
   20 conflict: . TKW_CONFLICT TIDENT TCOMMA TIDENT
   21 resource: . TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity TKW_WITH traitdefinitions
   22         | . TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity
   27 power: . TKW_STATIC TKW_POWER quantity
   28      | . TKW_DYNAMIC TKW_POWER quantity

    TKW_RESOURCE  shift, and go to state 57
    TKW_CONFLICT  shift, and go to state 58
    TKW_STATIC    shift, and go to state 59
    TKW_DYNAMIC   shift, and go to state 60
    TKW_PROPERTY  shift, and go to state 61
    TIDENT        shift, and go to state 62

    componentstatements  go to state 63
    componentstmt        go to state 64
    subcomponent         go to state 65
    property             go to state 66
    conflict             go to state 67
    resource             go to state 68
    power                go to state 69


State 36

   37 ident: TIDENT TDOT ident .

    $default  reduce using rule 37 (ident)


State 37

   36 ident: TIDENT .  [$end, TKW_PARAM, TKW_ENUM, TKW_IN, TKW_KERNEL, TKW_DATA, TKW_SAMPLE, TKW_IMPORT, TKW_CALL, TKW_ITERATE, TKW_MAP, TKW_PAR, TKW_SEQ, TKW_EXECUTE, TKW_IF, TKW_PROBABILITY, TKW_SWITCH, TIDENT, TDOTDOT, TRPAREN, TRBRACE, TRBRACKET, TCOMMA, TPLUS, TMINUS, TMUL, TDIV, TEXP, TCOMPEQ, TCOMPNE, TCOMPLT, TCOMPGT, TCOMPLE, TCOMPGE, TAND, TOR]
   37      | TIDENT . TDOT ident
  129 expr: TIDENT . TLBRACKET expr TRBRACKET
  130     | TIDENT . TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  139 functioncall: TIDENT . TLPAREN arguments TRPAREN

    TLPAREN    shift, and go to state 70
    TLBRACKET  shift, and go to state 71
    TDOT       shift, and go to state 26

    $default  reduce using rule 36 (ident)


State 38

   38 value: TINT .

    $default  reduce using rule 38 (value)


State 39

   39 value: TREAL .

    $default  reduce using rule 39 (value)


State 40

   42 constant: TKW_10POWER .

    $default  reduce using rule 42 (constant)


State 41

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   38 value: . TINT
   39      | . TREAL
   42 constant: . TKW_10POWER
  126 expr: . value
  127     | . constant
  128     | . ident
  129     | . TIDENT TLBRACKET expr TRBRACKET
  130     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  131     | . TLPAREN expr TRPAREN
  131     | TLPAREN . expr TRPAREN
  132     | . expr TPLUS expr
  133     | . expr TMINUS expr
  134     | . expr TMUL expr
  135     | . expr TDIV expr
  136     | . expr TEXP expr
  137     | . TMINUS expr
  138     | . functioncall
  139 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 37
    TINT         shift, and go to state 38
    TREAL        shift, and go to state 39
    TKW_10POWER  shift, and go to state 40
    TLPAREN      shift, and go to state 41
    TMINUS       shift, and go to state 42

    ident         go to state 43
    value         go to state 44
    constant      go to state 45
    expr          go to state 72
    functioncall  go to state 47


State 42

   36 ident: . TIDENT
   37      | . TIDENT TDOT ident
   38 value: . TINT
   39      | . TREAL
   42 constant: . TKW_10POWER
  126 expr: . value
  127     | . constant
  128     | . ident
  129     | . TIDENT TLBRACKET expr TRBRACKET
  130     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  131     | . TLPAREN expr TRPAREN
  132     | . expr TPLUS expr
  133     | . expr TMINUS expr
  134     | . expr TMUL expr
  135     | . expr TDIV expr
  136     | . expr TEXP expr
  137     | . TMINUS expr
  137     | TMINUS . expr
  138     | . functioncall
  139 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 37
    TINT         shift, and go to state 38
    TREAL        shift, and go to state 39
    TKW_10POWER  shift, and go to state 40
    TLPAREN      shift, and go to state 41
    TMINUS       shift, and go to state 42

    ident         go to state 43
    value         go to state 44
    constant      go to state 45
    expr          go to state 73
    functioncall  go to state 47


State 43

  128 expr: ident .

    $default  reduce using rule 128 (expr)


State 44

  126 expr: value .

    $default  reduce using rule 126 (expr)


State 45

  127 expr: constant .

    $default  reduce using rule 127 (expr)


State 46

   62 paramstmt: TKW_PARAM ident TEQUAL expr .  [$end, TKW_PARAM, TKW_ENUM, TKW_KERNEL, TKW_DATA, TKW_SAMPLE, TKW_IMPORT, TKW_CALL, TKW_ITERATE, TKW_MAP, TKW_PAR, TKW_SEQ, TKW_EXECUTE, TKW_IF, TKW_PROBABILITY, TKW_SWITCH, TIDENT]
   63          | TKW_PARAM ident TEQUAL expr . TKW_IN expr TDOTDOT expr
   64          | TKW_PARAM ident TEQUAL expr . TKW_IN TIDENT
  132 expr: expr . TPLUS expr
  133     | expr . TMINUS expr
  134     | expr . TMUL expr
  135     | expr . TDIV expr
  136     | expr . TEXP expr

    TKW_IN  shift, and go to state 74
    TPLUS   shift, and go to state 75
    TMINUS  shift, and go to state 76
    TMUL    shift, and go to state 77
    TDIV    shift, and go to state 78
    TEXP    shift, and go to state 79

    $default  reduce using rule 62 (paramstmt)


State 47

  138 expr: functioncall .
